--- a/Dashboard.html
+++ b/Dashboard.html
@@ -85,7 +85,7 @@
                                     View Site
                                 </a>
                                 <div class="dropdown-divider"></div>
-                                <a class="dropdown-item text-white" href="#" data-toggle="modal"
+                                <a class="dropdown-item text-white" data-toggle="modal" onclick="adminLogout()" style="cursor: pointer"
                                     data-target="#logoutModal">
                                     <i class="fas fa-sign-out-alt fa-sm fa-fw mr-2 text-gray-400"></i>
                                     Logout
@@ -293,7 +293,7 @@
 
 
 
-
+<script src="js/login.js"></script>
 <script src="js/bootstrap.min.js"></script>
 <script src="js/jQuery.slim.min.js"></script>
 <script src="js/jquery.min.js"></script>
