--- a/products.html
+++ b/products.html
@@ -86,7 +86,7 @@
                                     View Site
                                 </a>
                                 <div class="dropdown-divider"></div>
-                                <a class="dropdown-item text-white" href="#" data-toggle="modal"
+                                <a class="dropdown-item text-white" onclick="adminLogout()" style="cursor: pointer" data-toggle="modal"
                                     data-target="#logoutModal">
                                     <i class="fas fa-sign-out-alt fa-sm fa-fw mr-2 text-gray-400"></i>
                                     Logout
@@ -235,6 +235,7 @@
 
 </html>
 
+<script src="js/login.js"></script>
 <script src="js/bootstrap.min.js"></script>
 <script src="js/jQuery.slim.min.js"></script>
 <script src="js/jquery.min.js"></script>
